@@ -1,5 +1,6 @@
 <window>
     <defaultcontrol always="true">9333</defaultcontrol>
+    <onload condition="System.HasAddon(script.videoextras)">XBMC.RunScript(script.videoextras,check,"$INFO[ListItem.FilenameAndPath]")</onload>
     <onload condition="System.HasAddon(script.videolanguage) + !Container.Content(musicvideos)">RunScript(script.videolanguage,movieid=$INFO[ListItem.DBID])</onload>
     <onload>SetProperty(fanart_image,$INFO[ListItem.Art(fanart)],home)</onload>
     <onload condition="Container.Content(movies) + Skin.HasSetting(MovieInformation.PlayTrailer)">AlarmClock(PlayTrailer,PlayMedia($INFO[ListItem.Trailer],false,1),00:01,silent)</onload>
@@ -371,8 +372,8 @@
 							<onup>SetFocus(9334)</onup>
 							<ondown condition="System.HasAddon(script.cinema.experience) + Container(9333).HasFocus(1) + Container.Content(movies) + !SubString(Container.FolderPath,plugin) + IsEmpty(Window(movieinformation).Property(videoinfo.cinemaexperience))">SetProperty(videoinfo.cinemaexperience,1)</ondown>
 							<ondown condition="System.HasAddon(script.cinema.experience) + Container(9333).HasFocus(1) + Container.Content(movies) + !SubString(Container.FolderPath,plugin) + !IsEmpty(Window(movieinformation).Property(videoinfo.cinemaexperience))">SetFocus(9339)</ondown>
-							<ondown condition="System.HasAddon(script.cinema.experience) + Container(9333).HasFocus(1) + ![Container.Content(movies) + !SubString(Container.FolderPath,plugin)]">SetFocus(9333)</ondown>
-							<ondown condition="!Container(9333).HasFocus(1) | !System.HasAddon(script.cinema.experience">70</ondown>
+							<ondown condition="System.HasAddon(script.cinema.experience) + Container(9333).HasFocus(1) + ![Container.Content(movies) + !SubString(Container.FolderPath,plugin)]">SetFocus(70)</ondown>
+							<ondown condition="!Container(9333).HasFocus(1) | !System.HasAddon(script.cinema.experience)">70</ondown>
 							<onleft>SetFocus(9336)</onleft>
 							<onright>SetProperty(BounceRight,1,Home)</onright>
 							<scrolltime>0</scrolltime>
@@ -500,13 +501,20 @@
 									<icon>aeonflags/addition/OSDVideoNF.png</icon>
 									<thumb>aeonflags/addition/OSDVideoFO.png</thumb>
 								</item>
+								<item id="6">
+									<label>Extras</label>
+									<onclick>XBMC.RunScript(script.videoextras,display,"$INFO[ListItem.FilenameAndPath]")</onclick>
+									<visible>System.HasAddon(script.videoextras) + [Container.Content(movies) | Container.Content(episodes) | Container.Content(TVShows)] + IsEmpty(Window(movieinformation).Property("HideVideoExtrasButton"))</visible>
+									<icon>aeonflags/addition/OSDVizNF.png</icon>
+									<thumb>aeonflags/addition/OSDVizFO.png</thumb>
+								</item>
 								<item id="3">
 									<description>Get Artwork</description>
 									<label>$LOCALIZE[13511]</label>
 									<onclick>ActivateWindow(3004)</onclick>
 									<icon>aeonflags/addition/OSDInfoNF.png</icon>
 									<thumb>aeonflags/addition/OSDInfoFO.png</thumb>
-									<visible>[Container.Content(movies) | Container.Content(tvshows)] + !Container.Content(musicvideos)</visible>
+									<visible>!Skin.HasSetting(KioskMode) + [Container.Content(movies) | Container.Content(tvshows)] + !Container.Content(musicvideos)</visible>
 								</item>
 								<item id="3">
 									<description>Get Artwork</description>
@@ -515,7 +523,7 @@
 									<onclick>SendClick(2003,10)</onclick>
 									<icon>aeonflags/addition/OSDInfoNF.png</icon>
 									<thumb>aeonflags/addition/OSDInfoFO.png</thumb>
-									<visible>Container.Content(musicvideos) | Container.Content(episodes)</visible>
+									<visible>[Container.Content(musicvideos) | Container.Content(episodes)] + !Skin.HasSetting(KioskMode)</visible>
 								</item>
 								<item id="4">
 									<description>Get theme</description>
@@ -523,13 +531,14 @@
 									<icon>aeonflags/addition/OSDAudioNF.png</icon>
 									<thumb>aeonflags/addition/OSDAudioFO.png</thumb>
 									<onclick>RunScript(script.tvtunes,mode=solo&amp;tvpath=$INFO[ListItem.FilenameAndPath]&amp;tvname=$INFO[ListItem.TVShowTitle])</onclick>
-									<visible>[Container.Content(TVShows) | Container.Content(Seasons)] + System.HasAddon(script.tvtunes)</visible>
+									<visible>!Skin.HasSetting(KioskMode) + [Container.Content(TVShows) | Container.Content(Seasons)] + System.HasAddon(script.tvtunes)</visible>
 								</item>
 								<item id="5">
 									<label>$LOCALIZE[41307]</label>
 									<onclick>SendClick(2003,6)</onclick>
 									<icon>aeonflags/addition/OSDSkinNF.png</icon>
 									<thumb>aeonflags/addition/OSDSkinFO.png</thumb>
+									<visible>!Skin.HasSetting(KioskMode)</visible>
 								</item>
 							</content>
 						</control>
